--- a/module/input/SensorFilter/data/config/SensorFilter.yaml
+++ b/module/input/SensorFilter/data/config/SensorFilter.yaml
@@ -15,7 +15,7 @@ foot_down:
       certainty_threshold: 0.5
       uncertainty_threshold: 0.5
 
-motion_filter:
+ukf:
   update:
     velocity_decay: [0.5, 0.5, 0.5]
   noise:
@@ -32,7 +32,6 @@ motion_filter:
       velocity: [1e-2, 1e-2, 1e-2]
       rotational_velocity: [1e-5, 1e-5, 1e-5]
       rotation: [1e-3, 1e-3, 1e-3, 1e-3]
-
   initial:
     mean:
       position: [0, 0, 0.49] # A little above the ground
@@ -60,13 +59,11 @@ kalman_filter:
   Q: [1e-6, 1e-6, 1e-5, 1e-5]
   R: [0.000011025, 0.000011025, 0.0018284176, 0.0018284176]
 
-# Tuning parameters to scale walk command to match actual achieved velocity for deckreckoning x, y, theta
-deadreckoning_scale_dx: 1
-deadreckoning_scale_dy: 1
-deadreckoning_scale_dtheta: 0.6
-
 mahony:
   Kp: 10.8279
   Ki: 17.8421
   initial_quat: [1, 0, 0, 0]
   initial_bias: [0, 0, 0]
+
+# Tuning parameters to scale walk command to match actual achieved velocity for deckreckoning x, y, theta
+deadreckoning_scale: [1, 1, 0.6]
