--- a/module/input/SensorFilter/data/config/webots/SensorFilter.yaml
+++ b/module/input/SensorFilter/data/config/webots/SensorFilter.yaml
@@ -40,26 +40,42 @@ ukf:
       rotational_velocity: [0.1, 0.1, 0.1] # Fairly unsure about our rotational velocity
       rotation: [0.01, 0.01, 0.01, 0.01] # Not very sure of rotation (QX, QY, QZ, QW)
 
+# State = [roll, pitch, roll rate, pitch rate]'
 kalman_filter:
+  # Continuous time process model: dx = Ac*x Essentially results in dx = [roll rate, pitch rate, 0, 0]'
   Ac:
     - [0, 0, 1, 0]
     - [0, 0, 0, 1]
     - [0, 0, 0, 0]
     - [0, 0, 0, 0]
+  # Continuous time input model: No inputs
   Bc: []
+  # Continuous time measurement model: Essentially selects states from state vector which we measure
+  # We can measure all our states so: y = I*x = [roll, pitch, roll rate, pitch rate]'
   C:
     - [1, 0, 0, 0]
     - [0, 1, 0, 0]
     - [0, 0, 1, 0]
     - [0, 0, 0, 1]
+  # Process model noise
   Q: [1e-6, 1e-6, 1e-5, 1e-5]
+  # Measurement model noise
   R: [0.000011025, 0.000011025, 0.0018284176, 0.0018284176]
+  # Mahony Filter initial deadreckoned position and height
+  initial_rTWw: [0, 0, 0.49]
 
 mahony:
+  # Mahony "Proportional" Gain on error
   Kp: 10.8279
+  # Mahony "Integral" Gain used to compute bias
   Ki: 17.8421
-  initial_quat: [1, 0, 0, 0]
+  # Mahony Filter Initial bias
   initial_bias: [0, 0, 0]
+  # Mahony Filter initial deadreckoned position and height
+  initial_rTWw: [0, 0, 0.49]
 
 # Tuning parameters to scale walk command to match actual achieved velocity for deckreckoning x, y, theta
 deadreckoning_scale: [1, 1, 0.6]
+
+# Specify which filtering method to use, either UKF, KF or MAHONY
+filtering_method: MAHONY
