Move kalman test model to yaml

--- a/shared/tests/data/TestKalman.yaml
+++ b/shared/tests/data/TestKalman.yaml
@@ -2001,3 +2001,25 @@ measurements:
   - [-0.33605100000000, 0.0794950000000000]
   - [-0.33846100000000, 0.112252000000000]
   - [-0.32153000000000, 0.143012000000000]
+
+kalman:
+  # Continuous time process model:
+  A:
+    - [0, 0, 0]
+    - [1, 0, 0]
+    - [0, 0, 0]
+  # Continuous time input model: No inputs
+  B: []
+  # Continuous time measurement model:
+  C:
+    - [0, 1, 0]
+    - [1, 0, 1]
+  # Process model noise
+  Q:
+    - [3.336564728582061e-04, 1.210220716654972e-05, -1.708092671728623e-04]
+    - [1.210220716654972e-05, 4.680081577954583e-06, 6.268022135995622e-06]
+    - [-1.708092671728623e-04, 6.268022135995622e-06, 1.320010202073407e-04]
+  # Measurement model noise
+  R:
+    - [0.0502, 0.0]
+    - [0.0, 3.4546e-06]
