--- a/module/motion/IKKick/data/config/IKKick.yaml
+++ b/module/motion/IKKick/data/config/IKKick.yaml
@@ -7,16 +7,18 @@ servo:
 
 balancer:
   servo_angle_threshold: 0.1
-  foot_separation: 0.080 # 0.074 = hip separation
+  foot_separation: 0.09 # 0.074 = hip separation
   adjustment: -0.0000 #default value is 0.
-  stand_height: 0.23 #m
+  # Height to the robot's origin (somewhere near the bottom of the torso)
+  #stand_height: 0.23 #m
+  stand_height: 0.44
   forward_lean: 0.0 #m
 
   forward_duration: 1.5 #m/s
   return_duration: 0.5 #m/s
 
 active_balance:
-  enabled: true
+  enabled: false
   hip_rotation_scale: 2.0
   ankle_rotation_scale: 0.5
   angle_gain:
@@ -36,10 +38,10 @@ active_balance:
 
 kick:
   kick_velocity: 2 #m/s
-  follow_through: 0.10 #m
-  kick_height: 0.07 #m
-  wind_up: 0.1 #m
-  foot_separation_margin: 0.02 #m
+  follow_through: 0.20 #m
+  kick_height: 0.14 #m
+  wind_up: 0.2 #m
+  foot_separation_margin: 0.04 #m
 
   lift_before_windup_duration: 0.5
   return_before_place_duration: 0.1
@@ -49,7 +51,7 @@ kick_frames:
   # note that some of the following config is overwritten by planning processes
   lift_foot:
     #Note: pos does nothing
-    pos: [-0.05, 0, 0.05]
+    pos: [0.05, 0, 0.05]
     orientation: [0, 0, 0]
     duration: 0.1
 
@@ -61,6 +63,6 @@ kick_frames:
 
   place_foot:
     #This transform WILL entirely define the foot placement after kicking
-    pos: [0, 0.02, 0.02]
+    pos: [0, 0.00, 0.00]
     orientation: [0, 0, 0]
     duration: 0.3
