--- a/module/input/SensorFilter/data/config/SensorFilter.yaml
+++ b/module/input/SensorFilter/data/config/SensorFilter.yaml
@@ -1,4 +1,4 @@
-log_level: INFO
+log_level: DEBUG
 
 buttons:
   debounce_threshold: 7
@@ -74,9 +74,17 @@ mahony:
   # Mahony "Integral" Gain used to compute bias
   Ki: 0
   # Mahony Filter Initial bias
-  initial_bias: [-0.0967263, 0.00640166, 0.197743]
+  bias: [-0.0967263, 0.00640166, 0.197743]
   # Mahony Filter initial deadreckoned position and height
   initial_rTWw: [0, 0, 0.49]
+  # Bool to determine wether to run Mahony filter optimisation
+  run_optimisation: true
+  # Mahony filter minimum gain in grid search optimisation
+  min_gain: 0.0
+  # Mahony filter maximum gain in grid search optimisation
+  max_gain: 30
+  # Number of grid points to use in grid search optimisation
+  num_grid_points: 30
 
 # Tuning parameters to scale walk command to match actual achieved velocity for deckreckoning x, y, theta
 deadreckoning_scale: [1, 1, 0.6]
