--- a/module/motion/IKKick/data/config/IKKick.yaml
+++ b/module/motion/IKKick/data/config/IKKick.yaml
@@ -6,21 +6,24 @@ servo:
   torque: 100
 
 balancer:
-  servo_angle_threshold: 0.1
-  foot_separation: 0.09 # 0.074 = hip separation
-  adjustment: -0.0000 #default value is 0.
+  servo_angle_threshold: 0.0
+  foot_separation: 0.15 # 0.074 = hip separation
+  # Adjusts how far the robot leans over it's support foot
+  adjustment: -0.05 #default value is 0.
   # Height to the robot's origin (somewhere near the bottom of the torso)
   #stand_height: 0.23 #m
-  stand_height: 0.44
-  forward_lean: 0.0 #m
+  stand_height: 0.42
+  # How far to move the torso forward.
+  # Note that this tilts both the hips and ankles
+  forward_lean: 0.03 #m
 
-  forward_duration: 1.5 #m/s
-  return_duration: 0.5 #m/s
+  forward_duration: 0.01 #m/s
+  return_duration: 0.01 #m/s
 
 active_balance:
-  enabled: false
-  hip_rotation_scale: 2.0
-  ankle_rotation_scale: 0.5
+  enabled: true
+  hip_rotation_scale: 0.05
+  ankle_rotation_scale: 0.05
   angle_gain:
     p: 0.1
     i: 0.0
@@ -37,32 +40,32 @@ active_balance:
       d: 0
 
 kick:
-  kick_velocity: 2 #m/s
-  follow_through: 0.20 #m
-  kick_height: 0.14 #m
-  wind_up: 0.2 #m
+  kick_velocity: 0.5 #m/s
+  follow_through: 0.10 #m
+  kick_height: 0.09 #m
+  wind_up: 0.05 #m
   foot_separation_margin: 0.04 #m
 
-  lift_before_windup_duration: 0.5
-  return_before_place_duration: 0.1
+  lift_before_windup_duration: 0.9
+  return_before_place_duration: 0.9
 
 kick_frames:
-  servo_angle_threshold: 0.1
+  servo_angle_threshold: 0.2
   # note that some of the following config is overwritten by planning processes
   lift_foot:
     #Note: pos does nothing
     pos: [0.05, 0, 0.05]
     orientation: [0, 0, 0]
-    duration: 0.1
+    duration: 0.8
 
   kick:
     #Note: pos and duration do nothing
     pos: [0, 0, 0]
     orientation: [0, 0, 0]
-    duration: 0.1
+    duration: 0.9
 
   place_foot:
     #This transform WILL entirely define the foot placement after kicking
-    pos: [0, 0.00, 0.00]
+    pos: [0, 0.04, 0.04]
     orientation: [0, 0, 0]
     duration: 0.3
