--- a/module/motion/IKKick/data/config/IKKick.yaml
+++ b/module/motion/IKKick/data/config/IKKick.yaml
@@ -6,7 +6,7 @@ servo:
   torque: 100
 
 balancer:
-  servo_angle_threshold: 0.0
+  servo_angle_threshold: 0.5
   foot_separation: 0.15 # 0.074 = hip separation
   # Adjusts how far the robot leans over it's support foot
   adjustment: -0.05 #default value is 0.
@@ -21,7 +21,7 @@ balancer:
   return_duration: 0.01 #m/s
 
 active_balance:
-  enabled: true
+  enabled: false
   hip_rotation_scale: 0.05
   ankle_rotation_scale: 0.05
   angle_gain:
@@ -50,22 +50,22 @@ kick:
   return_before_place_duration: 0.9
 
 kick_frames:
-  servo_angle_threshold: 0.2
+  servo_angle_threshold: 0.5
   # note that some of the following config is overwritten by planning processes
   lift_foot:
     #Note: pos does nothing
-    pos: [0.05, 0, 0.05]
+    pos: [-0.05, 0, 0.05]
     orientation: [0, 0, 0]
-    duration: 0.8
+    duration: 0.1
 
   kick:
     #Note: pos and duration do nothing
     pos: [0, 0, 0]
     orientation: [0, 0, 0]
-    duration: 0.9
+    duration: 0.1
 
   place_foot:
     #This transform WILL entirely define the foot placement after kicking
-    pos: [0, 0.04, 0.04]
+    pos: [0, 0.02, 0.02]
     orientation: [0, 0, 0]
     duration: 0.3
