--- a/module/purpose/RoboCup/data/config/RoboCup.yaml
+++ b/module/purpose/RoboCup/data/config/RoboCup.yaml
@@ -1,11 +1,8 @@
 # Controls the minimum log level that NUClear log will display
 log_level: DEBUG
 
-# For the robot playing normally without listening to GameController
+# For the robot playing without listening to GameController
 force_playing: false
-
-# Force the robot to play as if it's a penalty shootout without listening to GameController
-force_penalty_shootout: false
 
 # The position of the robot
 # GOALIE, STRIKER, DEFENDER
