Add field positioning strategy and update path planning (#1062)
Co-authored-by: Brendan Annable <brendan@annable.me>
Co-authored-by: Ysobel <ysobelsims@gmail.com>
Co-authored-by: Ysobel Sims <35280100+ysims@users.noreply.github.com>

--- a/module/strategy/WalkToFieldPosition/data/config/WalkToFieldPosition.yaml
+++ b/module/strategy/WalkToFieldPosition/data/config/WalkToFieldPosition.yaml
@@ -1,5 +1,4 @@
 # Controls the minimum log level that NUClear log will display
 log_level: INFO
 
-# Position on field to walk to (x,y,theta)
-ready_position: [4, 0, -3.14]
+align_radius: 0.5
