--- a/module/planning/PlanKick/data/config/PlanKick.yaml
+++ b/module/planning/PlanKick/data/config/PlanKick.yaml
@@ -1,11 +1,11 @@
 # Controls the minimum log level that NUClear log will display
-log_level: DEBUG
+log_level: INFO
 
 # How long since the last ball measurement before ignoring it and assuming the ball is lost, in milliseconds
 ball_timeout_threshold: 1000
 
 # Maximum distance of the ball required to kick the ball (in metres)
-ball_distance_threshold: 0.45
+ball_distance_threshold: 0.25
 # Maximum angle of the ball from the torso's x-axis required to kick the ball (in radians), both clockwise and anticlockwise
 ball_angle_threshold: 0.4
 
