--- a/module/planning/PlanWalkPath/data/config/webots/PlanWalkPath.yaml
+++ b/module/planning/PlanWalkPath/data/config/webots/PlanWalkPath.yaml
@@ -1,9 +1,9 @@
 # Controls the minimum log level that NUClear log will display
-log_level: DEBUG
+log_level: INFO
 
 # General playing tuning values for approaching ball
 max_forward_speed: 0.5
-min_forward_speed: 0.1
+min_forward_speed: 0.2
 max_turn_speed: 0.4
 min_turn_speed: -0.4
 acceleration: 0.005 # maximum increment in walk command velocity
