--- a/module/motion/IKKick/data/config/IKKick.yaml
+++ b/module/motion/IKKick/data/config/IKKick.yaml
@@ -11,7 +11,7 @@ balancer:
   servo_angle_threshold: 2.0
   foot_separation: 0.165 # 0.074 = hip separation
   # Adjusts how far the robot leans over it's support foot
-  adjustment: 0.0014 #default value is 0.
+  adjustment: 0.01500 #default value is 0.
   # Height to the robot's origin (somewhere near the bottom of the torso)
   #stand_height: 0.23 #m
   stand_height: 0.46
@@ -19,11 +19,11 @@ balancer:
   # Note: this tilts both the hips and ankles
   forward_lean: 0.0860 #m
 
-  # Seems to be the forward duration of the kick movement
+  # Seems to be duration to lift the foot?
   # - Also seems to be related to an ankle glitch
-  forward_duration: 0.05 #m/s
-  # TBA
-  return_duration: 0.05 #m/s
+  forward_duration: 0.01 #m/s
+  # TBA - placing the foot duration?
+  return_duration: 0.02 #m/s
 
 active_balance:
   enabled: true
@@ -48,7 +48,7 @@ kick:
   kick_velocity: 0.25 #m/s
   follow_through: 0.20 #m
   kick_height: 0.10 #m
-  wind_up: 0.10 #m
+  wind_up: 0.20 #m
   foot_separation_margin: 0.10 #m
 
   lift_before_windup_duration: 0.15
@@ -61,16 +61,16 @@ kick_frames:
     #Note: pos does nothing
     pos: [0.0, 0, 0.05]
     orientation: [0, 0, 0]
-    duration: 0.25
+    duration: 0.05
 
   kick:
     #Note: pos and duration do nothing
     pos: [0, 0, 0]
     orientation: [0, 0, 0]
-    duration: 0.25
+    duration: 0.01
 
   place_foot:
     #This transform WILL entirely define the foot placement after kicking
     pos: [0.0, 0.00, -0.02]
     orientation: [0, 0, 0.0]
-    duration: 0.25
+    duration: 0.05
