--- a/module/platform/openCR/HardwareIO/data/config/HardwareIO_OpenCR.yaml
+++ b/module/platform/openCR/HardwareIO/data/config/HardwareIO_OpenCR.yaml
@@ -16,11 +16,11 @@ opencr:
 servos:
   - # [0]  R_SHOULDER_PITCH
     direction: -1
-    offset: pi / 4
+    offset: 0.0
     simulated: false
   - # [1]  L_SHOULDER_PITCH
     direction: 1
-    offset: pi / 4
+    offset: 0.0
     simulated: false
   - # [2]  R_SHOULDER_ROLL
     direction: -1
@@ -64,11 +64,11 @@ servos:
     simulated: false
   - # [12] R_KNEE
     direction: -1
-    offset: pi / 8
+    offset: pi / 4
     simulated: false
   - # [13] L_KNEE
-    direction: -1
-    offset: pi / 8
+    direction: 1
+    offset: pi / 4
     simulated: false
   - # [14] R_ANKLE_PITCH
     direction: 1
