Node 18 is way easier to read than hydrogen

--- a/.github/workflows/nusight.yaml
+++ b/.github/workflows/nusight.yaml
@@ -67,7 +67,7 @@ jobs:
 
     # Run on the Node container
     container:
-      image: node:lts-hydrogen
+      image: node:18
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -114,7 +114,7 @@ jobs:
 
     # Run on the Node container
     container:
-      image: node:lts-hydrogen
+      image: node:18
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -161,7 +161,7 @@ jobs:
 
     # Run on the Node container
     container:
-      image: node:lts-hydrogen
+      image: node:18
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
