--- a/module/skill/Walk/data/config/Walk.yaml
+++ b/module/skill/Walk/data/config/Walk.yaml
@@ -7,7 +7,7 @@ step_width: 0.18
 
 torso_height: 0.44
 torso_pitch: 0.4
-torso_offset_y: 0
+torso_midpoint_offset: [0, 0.05, 0]
 
 gains:
   legs: 40
