--- a/module/skill/Walk/data/config/Walk.yaml
+++ b/module/skill/Walk/data/config/Walk.yaml
@@ -1,22 +1,24 @@
 log_level: DEBUG
 
-step_limits: [1, 1, 0.4]
-step_height: 0.075
-step_period: 0.2
-step_width: 0.18
-
-torso_height: 0.44
-torso_pitch: 0.4
-torso_midpoint_offset: [0, 0.05, 0]
+walk:
+  period: 0.2
+  step:
+    limits: [0.5, 0.1, 0.4]
+    height: 0.07
+    width: 0.19
+  torso:
+    height: 0.41
+    pitch: 0.4
+    midpoint_offset: [0, 0.05, 0]
 
 gains:
-  legs: 40
-  arms: 13
+  legs: 10
+  arms: 10
 
 arms:
-  right_shoulder_pitch: 2.25
-  left_shoulder_pitch: 2.25
-  right_shoulder_roll: -0.176
-  left_shoulder_roll: 0.176
-  right_elbow: -1
-  left_elbow: -1
+  right_shoulder_pitch: 1.7
+  left_shoulder_pitch: 1.7
+  right_shoulder_roll: -0.2
+  left_shoulder_roll: 0.2
+  right_elbow: -2.4
+  left_elbow: -2.4
