--- a/module/skill/Walk/data/config/webots/Walk.yaml
+++ b/module/skill/Walk/data/config/webots/Walk.yaml
@@ -1,17 +1,19 @@
 log_level: DEBUG
 
-step_limits: [1, 1, 0.4]
-step_height: 0.05
-step_period: 0.2
-step_width: 0.2
-
-torso_height: 0.44
-torso_pitch: 0.4
-torso_midpoint_offset: [0, 0.05, 0]
+walk:
+  period: 0.2
+  step:
+    limits: [0.5, 0.1, 0.4]
+    height: 0.07
+    width: 0.19
+  torso:
+    height: 0.41
+    pitch: 0.4
+    midpoint_offset: [0, 0.05, 0]
 
 gains:
   legs: 50
-  arms: 13
+  arms: 10
 
 arms:
   right_shoulder_pitch: 1.7
