cleaning (and some formatting)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,7 +142,10 @@ add_custom_command(
 add_custom_target(generate_launch_configurations ALL DEPENDS "${PROJECT_SOURCE_DIR}/.vscode/launch.json")
 
 # Allow selection of subcontroller for conditional build
-set(SUBCONTROLLER "OPENCR" CACHE STRING "Select what subcontroller to build for" FORCE)
+set(SUBCONTROLLER
+    "OPENCR"
+    CACHE STRING "Select what subcontroller to build for" FORCE
+)
 # Set the possible values of subcontroller for cmake-gui
 set_property(CACHE SUBCONTROLLER PROPERTY STRINGS "OPENCR" "CM740" "NUSENSE")
 
@@ -152,18 +155,10 @@ set_property(CACHE SUBCONTROLLER PROPERTY STRINGS "OPENCR" "CM740" "NUSENSE")
 # based on subcontroller. Instead, adding `return()` statements to each
 # individual file mentioned below.
 # ~~~
-# # Collect relevant directories for each subcontroller
-# set(OPENCR "module/platform/openCR/HardwareIO")
-# set(CM740 "module/platform/cm740/HardwareIO" "module/platform/cm740/HardwareSimulator")
-# # Loop through all directories and exclude if they don't match subcontroller
-# foreach(OPENCR_DIR, CM740_DIR, NUSENSE_DIR IN ZIP_LISTS OPENCR, CM740, NUSENSE)
-#   if(EXISTS OPENCR_DIR AND NOT SUBCONTROLLER STREQUAL OPENCR)
-#     add_subdirectory(OPENCR_DIR EXCLUDE_FROM_ALL)
-#   endif()
-#   if(EXISTS CM740_DIR AND NOT SUBCONTROLLER STREQUAL CM740)
-#     add_subdirectory(CM740_DIR EXCLUDE_FROM_ALL)
-#   endif()
-#   if(EXISTS NUSENSE_DIR AND NOT SUBCONTROLLER STREQUAL NUSENSE)
-#     add_subdirectory(NUSENSE_DIR EXCLUDE_FROM_ALL)
-#   endif()
+# # Collect relevant directories for each subcontroller set(OPENCR "module/platform/openCR/HardwareIO") set(CM740
+# "module/platform/cm740/HardwareIO" "module/platform/cm740/HardwareSimulator") # Loop through all directories and
+# exclude if they don't match subcontroller foreach(OPENCR_DIR, CM740_DIR, NUSENSE_DIR IN ZIP_LISTS OPENCR, CM740,
+# NUSENSE) if(EXISTS OPENCR_DIR AND NOT SUBCONTROLLER STREQUAL OPENCR) add_subdirectory(OPENCR_DIR EXCLUDE_FROM_ALL)
+# endif() if(EXISTS CM740_DIR AND NOT SUBCONTROLLER STREQUAL CM740) add_subdirectory(CM740_DIR EXCLUDE_FROM_ALL) endif()
+# if(EXISTS NUSENSE_DIR AND NOT SUBCONTROLLER STREQUAL NUSENSE) add_subdirectory(NUSENSE_DIR EXCLUDE_FROM_ALL) endif()
 # endforeach()
