--- a/module/skill/Walk/data/config/webots/Walk.yaml
+++ b/module/skill/Walk/data/config/webots/Walk.yaml
@@ -1,15 +1,17 @@
 log_level: DEBUG
 
 walk:
-  period: 0.2
+  period: 0.35
   step:
     limits: [0.5, 0.1, 0.4]
     height: 0.07
     width: 0.19
+    apex_ratio: 0.5
   torso:
-    height: 0.41
-    pitch: 0.4
-    midpoint_offset: [0, 0.05, 0]
+    height: 0.4
+    pitch: 0.5
+    sway_offset: [0, 0.05, 0]
+    sway_ratio: 0.25
 
 gains:
   legs: 50
