--- a/module/purpose/Striker/data/config/Striker.yaml
+++ b/module/purpose/Striker/data/config/Striker.yaml
@@ -1,5 +1,5 @@
 # Controls the minimum log level that NUClear log will display
-log_level: INFO
+log_level: DEBUG
 
 # Position on field to walk to (x,y,theta)
-ready_position: [4, 0, -3.14]
+ready_position: [1.2, 0, -3.14]
