--- a/module/strategy/AlignBallToGoal/data/config/AlignBallToGoal.yaml
+++ b/module/strategy/AlignBallToGoal/data/config/AlignBallToGoal.yaml
@@ -1,5 +1,5 @@
 # Controls the minimum log level that NUClear log will display
-log_level: DEBUG
+log_level: INFO
 
 ball_distance_threshold: 0.6
 angle_threshold: 0.4
