--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -10,7 +10,7 @@
 ### The date in the Server command must either match, or be more recent than,
 ### the date in the FROM command
 ### Date format is ISO year/month/day
-FROM archlinux:base-20210829.0.32635
+FROM --platform=linux/amd64 archlinux:base-20210829.0.32635
 
 # ↓↓↓ UPDATE MIRRORS HERE ↓↓↓
 RUN echo -e "Server=https://archive.archlinux.org/repos/2021/08/29/\$repo/os/\$arch" | tee /etc/pacman.d/mirrorlist
@@ -36,12 +36,21 @@ RUN install-package \
     sudo \
     python \
     python-pip \
+    python-tqdm \
+    python-requests \
     base-devel \
+    ccache \
     ninja \
     cmake \
     meson \
     git \
-    ncurses
+    openssh \
+    rsync \
+    gdb \
+    colordiff \
+    parallel \
+    vim \
+    nano
 
 # Get python to look in /usr/local for packages
 RUN echo $(python -c "import site; print(site.getsitepackages()[0].replace('/usr', '/usr/local'))") \
@@ -221,7 +230,14 @@ RUN  install-from-source https://github.com/fmtlib/fmt/archive/6.1.2.tar.gz \
     -DFMT_TEST=OFF
 
 # Catch unit testing library
-RUN install-header-from-source https://github.com/catchorg/Catch2/releases/download/v2.11.1/catch.hpp
+RUN install-from-source https://github.com/catchorg/Catch2/archive/refs/tags/v3.3.1.tar.gz \
+    -DCATCH_CONFIG_CONSOLE_WIDTH=120 \
+    -DCATCH_CONFIG_CPP11_TO_STRING=ON \
+    -DCATCH_CONFIG_CPP17_UNCAUGHT_EXCEPTIONS=ON \
+    -DCATCH_CONFIG_CPP17_STRING_VIEW=ON \
+    -DCATCH_CONFIG_CPP17_VARIANT=ON \
+    -DCATCH_CONFIG_CPP17_OPTIONAL=ON \
+    -DCATCH_CONFIG_CPP17_BYTE=ON
 
 # libusb - a dependency of aravis
 RUN install-from-source https://github.com/libusb/libusb/archive/v1.0.24.tar.gz
@@ -299,15 +315,6 @@ RUN pip install \
 RUN install-package \
     arm-none-eabi-gcc \
     arm-none-eabi-newlib \
-    openssh \
-    rsync \
-    gdb \
-    valgrind \
-    colordiff \
-    parallel \
-    vim \
-    nano \
-    clinfo \
     doxygen
 
 # Install packages for nusight
@@ -328,6 +335,7 @@ RUN npm install -g \
 
 # Enable all the driver capabilities so we can use OpenCL in the container
 ENV NVIDIA_DRIVER_CAPABILITIES=all
+RUN install-package clinfo
 
 # Copy the nvidia OpenCL vendorfile into the container so we can also use OpenCL on nvidia GPUs
 COPY --chown=root:root etc/OpenCL/vendors/nvidia.icd /etc/OpenCL/vendors/nvidia.icd
