--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,9 +66,8 @@ endif()
 # if clang-tidy has an error
 if(CI_BUILD)
   add_compile_options(-Werror)
-  # Turn these back on once we have fixed all the clang-tidy warnings
-  # * set(CMAKE_CXX_CLANG_TIDY ${CMAKE_CXX_CLANG_TIDY} -warnings-as-errors=*)
-  # * set(CMAKE_C_CLANG_TIDY ${CMAKE_C_CLANG_TIDY} -warnings-as-errors=*)
+  # Turn these back on once we have fixed all the clang-tidy warnings * set(CMAKE_CXX_CLANG_TIDY ${CMAKE_CXX_CLANG_TIDY}
+  # -warnings-as-errors=*) * set(CMAKE_C_CLANG_TIDY ${CMAKE_C_CLANG_TIDY} -warnings-as-errors=*)
 endif()
 
 # Enable address sanitizer
